--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 <head>
 	<meta charset="utf-8" />
-	<title>Jess</title>
+	<title>Sen_Lu</title>
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<meta content="" name="description" />
 	<meta content="" name="keywords" />
@@ -101,8 +101,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-5 offset-lg-7">
-							<h1 class="wow fadeInUp" data-wow-delay=".5s">Hello my name is Jessy Jane.</h1>
-							<p class="lead wow fadeInUp" data-wow-delay=".75s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+							<h1 class="wow fadeInUp" data-wow-delay=".5s">Hello my name is Sen Lu.</h1>
+							<p class="lead wow fadeInUp" data-wow-delay=".75s"> I am currently studying MSc Robotics at the University of Manchester.I want to work on medical robots in the future.</p>
 							<div class="spacer-20"></div>
 							<a class="btn-custom scroll-to wow fadeInUp" data-wow-delay="1s" href="#section-about">About Me</a>
 						</div>
