--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<div class="row align-items-center">
 						<div class="col-lg-6 mb-sm-30 text-center">
 							<div class="de-images">
-								<img class="di-small-2 wow fadeInLeft" src="static/picture/3.jpg" alt="" />
+								/*<img class="di-small-2 wow fadeInLeft" src="static/picture/3.jpg" alt="" />*/
 								<img class="img-fluid wow fadeInRight" src="static/picture/1.jpg" alt="" />
 							</div>
 						</div>
