--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<div class="row">
 						<div class="col-lg-5 offset-lg-7">
 							<h1 class="wow fadeInUp" data-wow-delay=".5s">Hello my name is Sen Lu.</h1>
-							<p class="lead wow fadeInUp" data-wow-delay=".75s"> I am currently studying MSc Robotics at the University of Manchester.I want to work on medical robots in the future.</p>
+							<p class="lead wow fadeInUp" data-wow-delay=".75s"> I am currently studying MSc Robotics at the University of Manchester.</p>
 							<div class="spacer-20"></div>
 							<a class="btn-custom scroll-to wow fadeInUp" data-wow-delay="1s" href="#section-about">About Me</a>
 						</div>
@@ -123,8 +123,7 @@
 						<div class="col-lg-5 offset-md-1 wow fadeInLeft" data-wow-delay=".5s">
 							<h2>About <span class="id-color">Me</span></h2>
 							<p>
-								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-								similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.
+								I am a postgraduate student from the University of Manchester, majoring in robotics. I like to learn new things and challenge myself. I want to work on medical robots, and I hope to make more achievements in the future. If you want to know about me, please contact me at any time 
 							</p>
 							<div class="spacer-10"></div>
 							<span id="btn-show-skills" class="btn-border wow fadeInUp" data-wow-delay="1s">Show My Skills</span>
