--- a/index.html
+++ b/index.html
@@ -135,54 +135,54 @@
 						<div class="spacer-double"></div>
 						<div class="col-md-4">
 							<div class="skill-bar style-2">
-								<h5>Design</h5>
+								<h5>MATLAB</h5>
 								<div class="de-progress">
 									<div class="value"></div>
-									<div class="progress-bar" data-value="80%"></div>
+									<div class="progress-bar" data-value="50%"></div>
 								</div>
 							</div>
 
 							<div class="skill-bar style-2">
-								<h5>Branding</h5>
+								<h5>Arduino</h5>
 								<div class="de-progress">
 									<div class="value"></div>
-									<div class="progress-bar" data-value="70%"></div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-md-4">
-							<div class="skill-bar style-2">
-								<h5>Marketing</h5>
-								<div class="de-progress">
-									<div class="value"></div>
-									<div class="progress-bar" data-value="70%"></div>
-								</div>
-							</div>
-
-							<div class="skill-bar style-2">
-								<h5>Development</h5>
-								<div class="de-progress">
-									<div class="value"></div>
-									<div class="progress-bar" data-value="90%"></div>
+									<div class="progress-bar" data-value="50%"></div>
 								</div>
 							</div>
 						</div>
 
 						<div class="col-md-4">
 							<div class="skill-bar style-2">
-								<h5>Photography</h5>
+								<h5>Ansys</h5>
 								<div class="de-progress">
 									<div class="value"></div>
-									<div class="progress-bar" data-value="90%"></div>
+									<div class="progress-bar" data-value="50%"></div>
 								</div>
 							</div>
 
 							<div class="skill-bar style-2">
-								<h5>SEO</h5>
+								<h5>Python</h5>
 								<div class="de-progress">
 									<div class="value"></div>
-									<div class="progress-bar" data-value="75%"></div>
+									<div class="progress-bar" data-value="40%"></div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="skill-bar style-2">
+								<h5>C++</h5>
+								<div class="de-progress">
+									<div class="value"></div>
+									<div class="progress-bar" data-value="40%"></div>
+								</div>
+							</div>
+
+							<div class="skill-bar style-2">
+								<h5>PLC Progrmming</h5>
+								<div class="de-progress">
+									<div class="value"></div>
+									<div class="progress-bar" data-value="60%"></div>
 								</div>
 							</div>
 						</div>
