--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 					<div class="row">
 						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay="0s">
 							<div class="f-box f-icon-left f-icon-circle f-border">
-								<i class="fa fa-laptop id-color"></i>
+								<!-- <i class="fa fa-laptop id-color"></i> -->
 								<div class="fb-text">
 									<h4>Website Design</h4>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
