--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<li></li>
 									<li><a href="#section-about">About</a></li>
 									<li></li>
-									<li><a href="#section-services">Services</a></li>
+									<li><a href="#section-services">Education</a></li>
 									<li></li>
 									<li><a href="#section-portfolio">Portfolio</a></li>
 									<li></li>
@@ -195,8 +195,8 @@
 					<div class="row">
 						<div class="col-lg-6 offset-lg-3">
 							<div class="text-center">
-								<h2>Our Services</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<h2>Education</h2>
+								<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
 								<div class="spacer-30"></div>
 							</div>
 						</div>
@@ -233,35 +233,35 @@
 							</div>
 						</div>
 
-						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay="0s">
-							<div class="f-box f-icon-left f-icon-circle f-border">
-								<i class="fa fa-object-group id-color"></i>
-								<div class="fb-text">
-									<h4>Visual Editor</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-								</div>
-							</div>
-						</div>
+						<!-- <div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay="0s"> -->
+							<!-- <div class="f-box f-icon-left f-icon-circle f-border"> -->
+								<!-- <i class="fa fa-object-group id-color"></i> -->
+								<!-- <div class="fb-text"> -->
+									<!-- <h4>Visual Editor</h4> -->
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p> -->
+								<!-- </div> -->
+							<!-- </div> -->
+						<!-- </div> -->
 
-						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay=".25s">
-							<div class="f-box f-icon-left f-icon-circle f-border">
-								<i class="fa fa-hdd-o id-color"></i>
-								<div class="fb-text">
-									<h4>Backup &amp; Security</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-								</div>
-							</div>
-						</div>
+						<!-- <div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay=".25s"> -->
+							<!-- <div class="f-box f-icon-left f-icon-circle f-border"> -->
+								<!-- <i class="fa fa-hdd-o id-color"></i> -->
+								<!-- <div class="fb-text"> -->
+									<!-- <h4>Backup &amp; Security</h4> -->
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p> -->
+								<!-- </div> -->
+							<!-- </div> -->
+						<!-- </div> -->
 
-						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay=".5s">
-							<div class="f-box f-icon-left f-icon-circle f-border">
-								<i class="fa fa-comments-o id-color"></i>
-								<div class="fb-text">
-									<h4>IT Consultancy</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-								</div>
-							</div>
-						</div>
+						<!-- <div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay=".5s"> -->
+							<!-- <div class="f-box f-icon-left f-icon-circle f-border"> -->
+								<!-- <i class="fa fa-comments-o id-color"></i> -->
+								<!-- <div class="fb-text"> -->
+									<!-- <h4>IT Consultancy</h4> -->
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p> -->
+								<!-- </div> -->
+							<!-- </div> -->
+						<!-- </div> -->
 					</div>
 				</div>
 			</section>
