--- a/index.html
+++ b/index.html
@@ -207,18 +207,23 @@
 							<div class="f-box f-icon-left f-icon-circle f-border">
 								<!-- <i class="fa fa-laptop id-color"></i> -->
 								<div class="fb-text">
-									<h4>Website Design</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+									<h4>China University of Petroleum(East China)</h4>
+									<p>2019-2021</p>
 								</div>
 							</div>
 						</div>
 
 						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay=".25s">
 							<div class="f-box f-icon-left f-icon-circle f-border">
-								<i class="fa fa-paper-plane-o id-color"></i>
+								<!-- <i class="fa fa-paper-plane-o id-color"></i> -->
 								<div class="fb-text">
-									<h4>Email Marketing</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+									<h4>University of Sussex</h4>
+									<p>2021-2023
+									   Degree: BEng Mechanical Engineering with Robotics
+									   Class: First Class
+									   Achievements: Department of Engineeing and Design Industrial Design Seminar 2023 first prize
+									                 The Institution Best Project from the Institution of Mechanical Engineers
+									</p>
 								</div>
 							</div>
 						</div>
@@ -227,8 +232,10 @@
 							<div class="f-box f-icon-left f-icon-circle f-border">
 								<i class="fa fa-line-chart id-color"></i>
 								<div class="fb-text">
-									<h4>Digital Analytics</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+									<h4>University of Manchester</h4>
+									<p>2023- Present
+									   Major: MSc Robotics
+									</p>
 								</div>
 							</div>
 						</div>
