--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
 								<div class="fb-text">
 									<h4>University of Sussex</h4>
 									<p>2021-2023
-									   Degree: BEng Mechanical Engineering with Robotics
+									   Degree: BEng Mechanical Engineering with Robotics <p>
 									   Class: First Class
-									   Achievements: Department of Engineeing and Design Industrial Design Seminar 2023 first prize
+									   <p>Achievements: Department of Engineeing and Design Industrial Design Seminar 2023 first prize
 									                 The Institution Best Project from the Institution of Mechanical Engineers
 									</p>
 								</div>
