--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
 								<!-- <i class="fa fa-paper-plane-o id-color"></i> -->
 								<div class="fb-text">
 									<h4>University of Sussex</h4>
-									<p>2021-2023
-									   Degree: BEng Mechanical Engineering with Robotics <p>
-									   Class: First Class
-									   <p>Achievements: Department of Engineeing and Design Industrial Design Seminar 2023 first prize
-									                 The Institution Best Project from the Institution of Mechanical Engineers
+									<p>2021-2023 <p>
+									   <p>Degree: BEng Mechanical Engineering with Robotics <p>
+									   <p>Class: First Class<p>
+									   <p>Achievements: Department of Engineeing and Design Industrial Design Seminar 2023 first prize<p>
+									                 The <p>Institution Best Project from the Institution of Mechanical Engineers
 									</p>
 								</div>
 							</div>
