--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
 								<div class="fb-text">
 									<h4>China University of Petroleum(East China)</h4>
 									<p>2019-2021</p>
+									<p>Acquired Qualification: Graduation Certificate<p> 
 								</div>
 							</div>
 						</div>
@@ -222,7 +223,7 @@
 									   <p>Degree: BEng Mechanical Engineering with Robotics <p>
 									   <p>Class: First Class<p>
 									   <p>Achievements: Department of Engineeing and Design Industrial Design Seminar 2023 first prize<p>
-									                 The <p>Institution Best Project from the Institution of Mechanical Engineers
+									                 The Institution Best Project from the Institution of Mechanical Engineers
 									</p>
 								</div>
 							</div>
@@ -233,8 +234,8 @@
 								<i class="fa fa-line-chart id-color"></i>
 								<div class="fb-text">
 									<h4>University of Manchester</h4>
-									<p>2023- Present
-									   Major: MSc Robotics
+									<p>2023- Present<p>
+									   <p>Major: MSc Robotics
 									</p>
 								</div>
 							</div>
