--- a/index.html
+++ b/index.html
@@ -208,8 +208,9 @@
 								<!-- <i class="fa fa-laptop id-color"></i> -->
 								<div class="fb-text">
 									<h4>China University of Petroleum(East China)</h4>
-									<p>2019-2021</p>
-									<p>Acquired Qualification: Graduation Certificate<p> 
+									<p>Years:2019-2021</p>
+									
+									
 								</div>
 							</div>
 						</div>
@@ -219,7 +220,7 @@
 								<!-- <i class="fa fa-paper-plane-o id-color"></i> -->
 								<div class="fb-text">
 									<h4>University of Sussex</h4>
-									<p>2021-2023 <p>
+									<p>Years:2021-2023 <p>
 									   <p>Degree: BEng Mechanical Engineering with Robotics <p>
 									   <p>Class: First Class<p>
 									   <p>Achievements: Department of Engineeing and Design Industrial Design Seminar 2023 first prize<p>
@@ -231,10 +232,10 @@
 
 						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay=".5s">
 							<div class="f-box f-icon-left f-icon-circle f-border">
-								<i class="fa fa-line-chart id-color"></i>
+								<!-- <i class="fa fa-line-chart id-color"></i> -->
 								<div class="fb-text">
 									<h4>University of Manchester</h4>
-									<p>2023- Present<p>
+									<p>Years:2023- Present<p>
 									   <p>Major: MSc Robotics
 									</p>
 								</div>
