--- a/index.html
+++ b/index.html
@@ -275,30 +275,30 @@
 				</div>
 			</section>
 
-			<section id="section-cta">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-8 offset-md-2 text-center">
-							<h2>I Am Available For Freelance</h2>
-							<div class="spacer-10"></div>
-							<a href="#" class="btn-custom">Hire Me Now</a>
-						</div>
-					</div>
-				</div>
-			</section>
+			<!-- <section id="section-cta"> -->
+				<!-- <div class="container"> -->
+					<!-- <div class="row"> -->
+						<!-- <div class="col-md-8 offset-md-2 text-center"> -->
+							<!-- <h2>I Am Available For Freelance</h2> -->
+							<!-- <div class="spacer-10"></div> -->
+							<!-- <a href="#" class="btn-custom">Hire Me Now</a> -->
+						<!-- </div> -->
+					<!-- </div> -->
+				<!-- </div> -->
+			<!-- </section> -->
 
 			<!-- section begin -->
-			<section id="section-testimonial" class="custom-1" data-bgcolor="#D1F3E5">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6 offset-lg-3">
-							<div class="text-center">
-								<h2>Testimonials</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								<div class="spacer-30"></div>
-							</div>
-						</div>
-					</div>
+			<!-- <section id="section-testimonial" class="custom-1" data-bgcolor="#D1F3E5"> -->
+				<!-- <div class="container"> -->
+					<!-- <div class="row"> -->
+						<!-- <div class="col-lg-6 offset-lg-3"> -->
+							<!-- <div class="text-center"> -->
+								<!-- <h2>Testimonials</h2> -->
+								<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
+								<!-- <div class="spacer-30"></div> -->
+							<!-- </div> -->
+						<!-- </div> -->
+					<!-- </div> -->
 
 					<div class="row">
 						<div class="col-md-8 offset-md-2">
