--- a/index.html
+++ b/index.html
@@ -300,37 +300,37 @@
 						<!-- </div> -->
 					<!-- </div> -->
 
-					<div class="row">
-						<div class="col-md-8 offset-md-2">
-							<div id="testimonial-carousel-single" class="owl-carousel owl-theme wow fadeInUp">
-								<blockquote class="testimonial-big">
-									<img src="static/picture/1.jpg" alt="" />
-									I'm always impressed with the services. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip.
+					<!-- <div class="row"> -->
+						<!-- <div class="col-md-8 offset-md-2"> -->
+							<!-- <div id="testimonial-carousel-single" class="owl-carousel owl-theme wow fadeInUp"> -->
+								<!-- <blockquote class="testimonial-big"> -->
+									<!-- <img src="static/picture/1.jpg" alt="" /> -->
+									<!-- I'm always impressed with the services. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis -->
+									<!-- nostrud exercitation ullamco laboris nisi ut aliquip. -->
 
-									<span class="name">John, Customer</span>
-								</blockquote>
+									<!-- <span class="name">John, Customer</span> -->
+								<!-- </blockquote> -->
 
-								<blockquote class="testimonial-big">
-									<img src="static/picture/2.jpg" alt="" />
-									I'm always impressed with the services. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip.
+								<!-- <blockquote class="testimonial-big"> -->
+									<!-- <img src="static/picture/2.jpg" alt="" /> -->
+									<!-- I'm always impressed with the services. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis -->
+									<!-- nostrud exercitation ullamco laboris nisi ut aliquip. -->
 
-									<span class="name">Sandra, Customer</span>
-								</blockquote>
+									<!-- <span class="name">Sandra, Customer</span> -->
+								<!-- </blockquote> -->
 
-								<blockquote class="testimonial-big">
-									<img src="static/picture/3.jpg" alt="" />
-									I'm always impressed with the services. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip.
+								<!-- <blockquote class="testimonial-big"> -->
+									<!-- <img src="static/picture/3.jpg" alt="" /> -->
+									<!-- I'm always impressed with the services. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis -->
+									<!-- nostrud exercitation ullamco laboris nisi ut aliquip. -->
 
-									<span class="name">Michael, Customer</span>
-								</blockquote>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
+									<!-- <span class="name">Michael, Customer</span> -->
+								<!-- </blockquote> -->
+							<!-- </div> -->
+						<!-- </div> -->
+					<!-- </div> -->
+				<!-- </div> -->
+			<!-- </section> -->
 			<!-- section close -->
 
 			<!-- section begin -->
