--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<h5><span class="id-color">Portfolio</span></h5>
-							<h2>I Love What I Do</h2>
+							<h2>Undergraduate Academic projects</h2>
 						</div>
 
 						<div class="spacer-single"></div>
@@ -348,15 +348,15 @@
 						<div class="col-md-12 text-center">
 							<ul id="filters">
 								<li><a href="#" data-filter="*" class="selected">all projects</a></li>
-								<li><a href="#" data-filter=".illustration">illustration</a></li>
-								<li><a href="#" data-filter=".mobile">mobile</a></li>
-								<li><a href="#" data-filter=".photography">photography</a></li>
-								<li><a href="#" data-filter=".website">website</a></li>
+								<li><a href="#" data-filter=".illustration">Elisa-3 robot</a></li>
+								<li><a href="#" data-filter=".mobile">FESTO MPS500</a></li>
+								<li><a href="#" data-filter=".photography">Quanser Qbot3</a></li>
+								<li><a href="#" data-filter=".website">Personal Project</a></li>
 							</ul>
 
 							<div id="gallery" class="gallery full-gallery de-gallery pf_full_width pf_3_cols grid sequence">
 								<!-- gallery item -->
-								<div class="item illustration website gallery-item pf-click" data-value="project-details-image.html">
+								<div class="item illustration mobile gallery-item pf-click" data-value="project-details-image.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
