--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
 								<li><a href="#" data-filter=".mobile">FESTO MPS500</a></li>
 								<li><a href="#" data-filter=".photography">Quanser Qbot3</a></li>
 								<li><a href="#" data-filter=".website">Personal Project</a></li>
+								<li><a href="#" data-filter=".five-bar">five-bar planar parallel robot</a></li>
 							</ul>
 
 							<div id="gallery" class="gallery full-gallery de-gallery pf_full_width pf_3_cols grid sequence">
@@ -366,7 +367,7 @@
 										<img src="static/picture/1.jpg" alt="" />
 									</div>
 								</div>
-								<!-- close gallery item -->
+								<!-- close gallery item 第一幅大图片 -->       
 
 								<!-- gallery item -->
 								<div class="item photography gallery-item pf-click" data-value="project-details-slider.html">
