--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
 							<div id="gallery" class="gallery full-gallery de-gallery pf_full_width pf_3_cols grid sequence">
 								<!-- gallery item -->
-								<div class="item illustration gallery-item pf-click" data-value="static/picture/2.jpg">
+								<div class="item illustration gallery-item pf-click" data-value="project-details-image.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
