--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 												<span class="project-name">Youtube Video Big</span>
 											</span>
 										</span>
-										<img src="static/picture/6.jpg" alt="" />
+										<img src="sen/sen1.jpg" alt="" />
 									</div>
 								</div>
 								<!-- close gallery item -->
