--- a/index.html
+++ b/index.html
@@ -422,14 +422,14 @@
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item mobile website gallery-item pf-click" data-value="project-details-youtube-big.html">
+								<div class="item mobile website gallery-item pf-click" data-value="https://primarycomet.github.io/">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
 												<span class="project-name">Youtube Video Big</span>
 											</span>
 										</span>
-										<img src="sen/sen1.jpg" alt="" />
+										<img src="static/picture/6.jpg" alt="" />
 									</div>
 								</div>
 								<!-- close gallery item -->
