--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item mobile website gallery-item pf-click" data-value="https://primarycomet.github.io/">
+								<div class="item mobile website gallery-item pf-click" data-value="https://canvas.sussex.ac.uk/courses/21680">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
