--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
 						<div class="col-md-12 text-center">
 							<ul id="filters">
-								<li><a href="#" data-filter="*" class="selected">all projects</a></li>
+								<!-- <li><a href="#" data-filter="*" class="selected">all projects</a></li> -->
 								<li><a href="#" data-filter=".illustration">Elisa-3 robot</a></li>
 								<li><a href="#" data-filter=".mobile">FESTO MPS500</a></li>
 								<li><a href="#" data-filter=".photography">Quanser Qbot3</a></li>
@@ -422,7 +422,7 @@
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item mobile website gallery-item pf-click" data-value="https://canvas.sussex.ac.uk/courses/21680">
+								<div class="item mobile website gallery-item pf-click" data-value="project-details-youtube-big.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
