--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 												<span class="project-name">Multi Images</span>
 											</span>
 										</span>
-										<img src="static/picture/1.jpg" alt="" />
+										<img src="sen/elisa3.jpg" alt="" />
 									</div>
 								</div>
 								<!-- close gallery item 第一幅大图片 -->       
