--- a/index.html
+++ b/index.html
@@ -390,13 +390,13 @@
 												<span class="project-name">Youtube Video</span>
 											</span>
 										</span>
-										<img src="static/picture/3.jpg" alt="" />
+										<img src="sen/Arduino小车.gif" alt="" />
 									</div>
 								</div>
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item photography illustration mobile gallery-item pf-click" data-value="project-details-image-big.html">
+								<div class="item photography  mobile gallery-item pf-click" data-value="project-details-image-big.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
