--- a/index.html
+++ b/index.html
@@ -396,40 +396,40 @@
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item photography  mobile gallery-item pf-click" data-value="project-details-image-big.html">
+								<div class="item mobile gallery-item pf-click" data-value="project-details-image-big.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
 												<span class="project-name">Multi Images Big</span>
 											</span>
 										</span>
-										<img src="static/picture/4.jpg" alt="" />
+										<img src="sen/plc1.gif" alt="" />
 									</div>
 								</div>
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item photography mobile website gallery-item pf-click" data-value="project-details-slider-big.html">
+								<div class="item  mobile website gallery-item pf-click" data-value="project-details-slider-big.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
 												<span class="project-name">Slider Images Big</span>
 											</span>
 										</span>
-										<img src="static/picture/5.jpg" alt="" />
+										<img src="sen/plc2.gif" alt="" />
 									</div>
 								</div>
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item mobile website gallery-item pf-click" data-value="project-details-youtube-big.html">
+								<div class="item mobile gallery-item pf-click" data-value="project-details-youtube-big.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
 												<span class="project-name">Youtube Video Big</span>
 											</span>
 										</span>
-										<img src="static/picture/6.jpg" alt="" />
+										<img src="sen/sen1.jpg" alt="" />
 									</div>
 								</div>
 								<!-- close gallery item -->
