--- a/index.html
+++ b/index.html
@@ -377,7 +377,46 @@
 												<span class="project-name">Slider Images</span>
 											</span>
 										</span>
-										<img src="static/picture/2.jpg" alt="" />
+										<img src="sen/A1.gif" alt="" />
+									</div>
+								</div>
+								<!-- close gallery item -->
+
+								<!-- gallery item -->
+								<div class="item photography gallery-item pf-click" data-value="project-details-slider.html">
+									<div class="picframe wow">
+										<span class="overlay">
+											<span class="pf_text">
+												<span class="project-name">Slider Images</span>
+											</span>
+										</span>
+										<img src="sen/A2.gif" alt="" />
+									</div>
+								</div>
+								<!-- close gallery item -->
+
+								<!-- gallery item -->
+								<div class="item photography gallery-item pf-click" data-value="project-details-slider.html">
+									<div class="picframe wow">
+										<span class="overlay">
+											<span class="pf_text">
+												<span class="project-name">Slider Images</span>
+											</span>
+										</span>
+										<img src="sen/Qbot3.png" alt="" />
+									</div>
+								</div>
+								<!-- close gallery item -->
+
+								<!-- gallery item -->
+								<div class="item photography gallery-item pf-click" data-value="project-details-slider.html">
+									<div class="picframe wow">
+										<span class="overlay">
+											<span class="pf_text">
+												<span class="project-name">Slider Images</span>
+											</span>
+										</span>
+										<img src="sen/QBot2.png" alt="" />
 									</div>
 								</div>
 								<!-- close gallery item -->
