--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item  mobile website gallery-item pf-click" data-value="project-details-slider-big.html">
+								<div class="item  mobile  gallery-item pf-click" data-value="project-details-slider-big.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
