--- a/index.html
+++ b/index.html
@@ -484,6 +484,18 @@
 								</div>
 								<!-- close gallery item -->
 
+								<div class="item five-bar gallery-item pf-click" data-value="project-details-slider-big.html">
+									<div class="picframe wow">
+										<span class="overlay">
+											<span class="pf_text">
+												<span class="project-name">Slider Images Big</span>
+											</span>
+										</span>
+										<img src="sen/5bar1.gif" alt="" />
+									</div>
+								</div>
+								<!-- close gallery item -->
+
 								<!-- gallery item -->
 								<div class="item mobile gallery-item pf-click" data-value="project-details-youtube-big.html">
 									<div class="picframe wow">
