--- a/index.html
+++ b/index.html
@@ -503,19 +503,19 @@
 												<span class="project-name">Slider Images Big</span>
 											</span>
 										</span>
-										<img src="sen/5bar2.gif" alt="" />
+										<img src="sen/5barrobot.png" alt="" />
 									</div>
 								</div>
 								<!-- close gallery item -->
 
-								<div class="item five-bar gallery-item pf-click" data-value="https://www.olevod.com/">
+								<div class="item five-bar gallery-item pf-click" data-value="project-details-slider-big.html">
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
 												<span class="project-name">Slider Images Big</span>
 											</span>
 										</span>
-										<img src="sen/5barrobot.png" alt="" />
+										<img src="sen/5bar2.gif" alt="" />
 									</div>
 								</div>
 								<!-- close gallery item -->
