--- a/index.html
+++ b/index.html
@@ -396,42 +396,42 @@
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item photography gallery-item pf-click" data-value="project-details-slider.html">
-									<div class="picframe wow">
-										<span class="overlay">
-											<span class="pf_text">
-												<span class="project-name">Slider Images</span>
-											</span>
-										</span>
-										<img src="sen/Qbot3.png" alt="" />
-									</div>
-								</div>
+								<!-- <div class="item photography gallery-item pf-click" data-value="project-details-slider.html"> -->
+									<!-- <div class="picframe wow"> -->
+										<!-- <span class="overlay"> -->
+											<!-- <span class="pf_text"> -->
+												<!-- <span class="project-name">Slider Images</span> -->
+											<!-- </span> -->
+										<!-- </span> -->
+										<!-- <img src="sen/Qbot3.png" alt="" /> -->
+									<!-- </div> -->
+								<!-- </div> -->
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item photography gallery-item pf-click" data-value="project-details-slider.html">
-									<div class="picframe wow">
-										<span class="overlay">
-											<span class="pf_text">
-												<span class="project-name">Slider Images</span>
-											</span>
-										</span>
-										<img src="sen/QBot2.png" alt="" />
-									</div>
-								</div>
+								<!-- <div class="item photography gallery-item pf-click" data-value="project-details-slider.html"> -->
+									<!-- <div class="picframe wow"> -->
+										<!-- <span class="overlay"> -->
+											<!-- <span class="pf_text"> -->
+												<!-- <span class="project-name">Slider Images</span> -->
+											<!-- </span> -->
+										<!-- </span> -->
+										<!-- <img src="sen/QBot2.png" alt="" /> -->
+									<!-- </div> -->
+								<!-- </div> -->
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item illustration gallery-item pf-click" data-value="project-details-youtube.html">
-									<div class="picframe wow">
-										<span class="overlay">
-											<span class="pf_text">
-												<span class="project-name">Youtube Video</span>
-											</span>
-										</span>
-										<img src="sen/elisa3.jpg" alt="" />
-									</div>
-								</div>
+								<!-- <div class="item illustration gallery-item pf-click" data-value="project-details-youtube.html"> -->
+									<!-- <div class="picframe wow"> -->
+										<!-- <span class="overlay"> -->
+											<!-- <span class="pf_text"> -->
+												<!-- <span class="project-name">Youtube Video</span> -->
+											<!-- </span> -->
+										<!-- </span> -->
+										<!-- <img src="sen/elisa3.jpg" alt="" /> -->
+									<!-- </div> -->
+								<!-- </div> -->
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
@@ -472,16 +472,16 @@
 								</div>
 								<!-- close gallery item -->
 
-								<div class="item website gallery-item pf-click" data-value="project-details-slider-big.html">
-									<div class="picframe wow">
-										<span class="overlay">
-											<span class="pf_text">
-												<span class="project-name">Slider Images Big</span>
-											</span>
-										</span>
-										<img src="sen/individual_project.png" alt="" />
-									</div>
-								</div>
+								<!-- <div class="item website gallery-item pf-click" data-value="project-details-slider-big.html"> -->
+									<!-- <div class="picframe wow"> -->
+										<!-- <span class="overlay"> -->
+											<!-- <span class="pf_text"> -->
+												<!-- <span class="project-name">Slider Images Big</span> -->
+											<!-- </span> -->
+										<!-- </span> -->
+										<!-- <img src="sen/individual_project.png" alt="" /> -->
+									<!-- </div> -->
+								<!-- </div> -->
 								<!-- close gallery item -->
 
 								<div class="item five-bar gallery-item pf-click" data-value="project-details-slider-big.html">
@@ -496,16 +496,16 @@
 								</div>
 								<!-- close gallery item -->
 
-								<div class="item five-bar gallery-item pf-click" data-value="project-details-slider-big.html">
-									<div class="picframe wow">
-										<span class="overlay">
-											<span class="pf_text">
-												<span class="project-name">Slider Images Big</span>
-											</span>
-										</span>
-										<img src="sen/5barrobot.png" alt="" />
-									</div>
-								</div>
+								<!-- <div class="item five-bar gallery-item pf-click" data-value="project-details-slider-big.html"> -->
+									<!-- <div class="picframe wow"> -->
+										<!-- <span class="overlay"> -->
+											<!-- <span class="pf_text"> -->
+												<!-- <span class="project-name">Slider Images Big</span> -->
+											<!-- </span> -->
+										<!-- </span> -->
+										<!-- <img src="sen/5barrobot.png" alt="" /> -->
+									<!-- </div> -->
+								<!-- </div> -->
 								<!-- close gallery item -->
 
 								<div class="item five-bar gallery-item pf-click" data-value="project-details-slider-big.html">
@@ -521,16 +521,16 @@
 								<!-- close gallery item -->
 
 								<!-- gallery item -->
-								<div class="item mobile gallery-item pf-click" data-value="project-details-youtube-big.html">
-									<div class="picframe wow">
-										<span class="overlay">
-											<span class="pf_text">
-												<span class="project-name">Youtube Video Big</span>
-											</span>
-										</span>
-										<img src="sen/sen1.jpg" alt="" />
-									</div>
-								</div>
+								<!-- <div class="item mobile gallery-item pf-click" data-value="project-details-youtube-big.html"> -->
+									<!-- <div class="picframe wow"> -->
+										<!-- <span class="overlay"> -->
+											<!-- <span class="pf_text"> -->
+												<!-- <span class="project-name">Youtube Video Big</span> -->
+											<!-- </span> -->
+										<!-- </span> -->
+										<!-- <img src="sen/sen1.jpg" alt="" /> -->
+									<!-- </div> -->
+								<!-- </div> -->
 								<!-- close gallery item -->
 							</div>
 						</div>
