--- a/index.html
+++ b/index.html
@@ -655,8 +655,8 @@
 					<div class="row">
 						<div class="col-lg-6 offset-lg-3">
 							<div class="text-center">
-								<h2>Contact Us</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<h2>Contact me</h2>
+								<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
 								<div class="spacer-30"></div>
 							</div>
 						</div>
@@ -704,13 +704,13 @@
 						<div class="col-md-4">
 							<div class="wm-1"></div>
 							<i class="icon_mobile id-color size40 mb20"></i>
-							<h6 class="id-color">Call Us</h6>
-							<p>(208) 333 9296</p>
+							<h6 class="id-color">Call Me</h6>
+							<p>07749784898</p>
 						</div>
 
 						<div class="col-md-4">
 							<div class="wm-1"></div>
-							<i class="icon_house_alt id-color size40 mb20"></i>
+							<i class="fa fa-facebook fa-lg"></i>
 							<h6 class="id-color">Visit Office</h6>
 							<p>Collins Street West, London, UK</p>
 						</div>
@@ -718,8 +718,8 @@
 						<div class="col-md-4">
 							<div class="wm-1"></div>
 							<i class="icon_mail_alt id-color size40 mb20"></i>
-							<h6 class="id-color">Email Us</h6>
-							<p>contact@jess-template.com</p>
+							<h6 class="id-color">Email me</h6>
+							<p>sen.lu@postgrad.manchester.ac.uk</p>
 						</div>
 					</div>
 				</div>
