--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="row align-items-center">
-					<div class="col-md-6 sm-text-center mb-sm-30">Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></div>
+					<!-- <div class="col-md-6 sm-text-center mb-sm-30">Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></div> -->
 
 					<div class="col-md-6 text-md-right text-sm-left">
 						<div class="social-icons">
