--- a/index.html
+++ b/index.html
@@ -728,23 +728,23 @@
 		<!-- content close -->
 
 		<!-- footer begin -->
-		<footer class="footer">
-			<div class="container">
-				<div class="row align-items-center">
+		<!-- <footer class="footer"> -->
+			<!-- <div class="container"> -->
+				<!-- <div class="row align-items-center"> -->
 					<!-- <div class="col-md-6 sm-text-center mb-sm-30">Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></div> -->
 
-					<div class="col-md-6 text-md-right text-sm-left">
-						<div class="social-icons">
-							<a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-							<a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-							<a href="#"><i class="fa fa-linkedin fa-lg"></i></a>
-							<a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
-							<a href="#"><i class="fa fa-rss fa-lg"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</footer>
+					<!-- <div class="col-md-6 text-md-right text-sm-left"> -->
+						<!-- <div class="social-icons"> -->
+							<!-- <a href="#"><i class="fa fa-facebook fa-lg"></i></a> -->
+							<!-- <a href="#"><i class="fa fa-twitter fa-lg"></i></a> -->
+							<!-- <a href="#"><i class="fa fa-linkedin fa-lg"></i></a> -->
+							<!-- <a href="#"><i class="fa fa-google-plus fa-lg"></i></a> -->
+							<!-- <a href="#"><i class="fa fa-rss fa-lg"></i></a> -->
+						<!-- </div> -->
+					<!-- </div> -->
+				<!-- </div> -->
+			<!-- </div> -->
+		<!-- </footer> -->
 		<!-- footer close -->
 
 		<a href="#" id="back-to-top"></a>
