--- a/index.html
+++ b/index.html
@@ -708,12 +708,12 @@
 							<p>07749784898</p>
 						</div>
 
-						<!-- <div class="col-md-4"> -->
-							<!-- <div class="wm-1"></div> -->
-							<!-- <i class="icon_house_alt id-color size40 mb20"></i> -->
-							<!-- <h6 class="id-color">Visit Office</h6> -->
-							<!-- <p>Collins Street West, London, UK</p> -->
-						<!-- </div> -->
+						<div class="col-md-4">
+							<div class="wm-1"></div>
+							<i class="icon_google_alt id-color size40 mb20"></i>
+							<h6 class="id-color">Visit Office</h6>
+							<p>Collins Street West, London, UK</p>
+						</div>
 
 						<div class="col-md-4">
 							<div class="wm-1"></div>
