--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
 
 						<div class="col-md-4">
 							<div class="wm-1"></div>
-							<i class="icon_google_alt id-color size40 mb20"></i>
+							<i class="icon_gift_alt id-color size40 mb20"></i>
 							<h6 class="id-color">Visit Office</h6>
 							<p>Collins Street West, London, UK</p>
 						</div>
