--- a/index.html
+++ b/index.html
@@ -710,9 +710,9 @@
 
 						<div class="col-md-4">
 							<div class="wm-1"></div>
-							<i class="icon_chat_alt id-color size40 mb20"></i>
-							<h6 class="id-color">Visit Office</h6>
-							<p>Collins Street West, London, UK</p>
+							<i class="icon_linkedin_alt id-color size40 mb20"></i>
+							<h6 class="id-color">LinkedIn</h6>
+							<p>Search "Lu Sen"</p>
 						</div>
 
 						<div class="col-md-4">
