--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
 
 						<div class="col-md-4">
 							<div class="wm-1"></div>
-							<i class="icon_linkedin_alt id-color size40 mb20"></i>
+							<i class="social_linkedin id-color size40 mb20"></i>
 							<h6 class="id-color">LinkedIn</h6>
 							<p>Search "Lu Sen"</p>
 						</div>
