--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Multi Images</span>
+												<span class="project-name">Details</span>
 											</span>
 										</span>
 										<img src="sen/Arduino小车.gif" alt="" />
@@ -374,7 +374,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Slider Images</span>
+												<span class="project-name">Details</span>
 											</span>
 										</span>
 										<img src="sen/A1.gif" alt="" />
@@ -387,7 +387,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Slider Images</span>
+												<span class="project-name">Details</span>
 											</span>
 										</span>
 										<img src="sen/A2.gif" alt="" />
@@ -439,7 +439,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Multi Images Big</span>
+												<span class="project-name">Details</span>
 											</span>
 										</span>
 										<img src="sen/plc1.gif" alt="" />
@@ -452,7 +452,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Slider Images Big</span>
+												<span class="project-name">Details</span>
 											</span>
 										</span>
 										<img src="sen/plc2.gif" alt="" />
@@ -464,7 +464,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Slider Images Big</span>
+												<span class="project-name">Details</span>
 											</span>
 										</span>
 										<img src="sen/hand.gif" alt="" />
@@ -488,7 +488,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Slider Images Big</span>
+												<span class="project-name">Details</span>
 											</span>
 										</span>
 										<img src="sen/5bar1.gif" alt="" />
@@ -512,7 +512,7 @@
 									<div class="picframe wow">
 										<span class="overlay">
 											<span class="pf_text">
-												<span class="project-name">Slider Images Big</span>
+												<span class="project-name">Details</span>
 											</span>
 										</span>
 										<img src="sen/5bar2.gif" alt="" />
