--- a/index.html
+++ b/index.html
@@ -202,25 +202,25 @@
 						</div>
 					</div>
 
-					<div class="row">
-						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay="0s">
-							<div class="f-box f-icon-left f-icon-circle f-border">
+					<!-- <div class="row"> -->
+						<!-- <div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay="0s"> -->
+							<!-- <div class="f-box f-icon-left f-icon-circle f-border"> -->
 								<!-- <i class="fa fa-laptop id-color"></i> -->
-								<div class="fb-text">
-									<h4>China University of Petroleum(East China)</h4>
-									<p>Years:2019-2021</p>
+								<!-- <div class="fb-text"> -->
+									<!-- <h4>China University of Petroleum(East China)</h4> -->
+									<!-- <p>Years:2019-2021</p> -->
 									
 									
-								</div>
-							</div>
-						</div>
+								<!-- </div> -->
+							<!-- </div> -->
+						<!-- </div> -->
 
 						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay=".25s">
 							<div class="f-box f-icon-left f-icon-circle f-border">
 								<!-- <i class="fa fa-paper-plane-o id-color"></i> -->
 								<div class="fb-text">
 									<h4>University of Sussex</h4>
-									<p>Years:2021-2023 <p>
+									<p>Years:2019-2023 <p>
 									   <p>Degree: BEng Mechanical Engineering with Robotics <p>
 									   <p>Class: First Class<p>
 									   <p>Achievements: Department of Engineeing and Design Industrial Design Seminar 2023 first prize<p>
