--- a/index.html
+++ b/index.html
@@ -252,15 +252,15 @@
 							<!-- </div> -->
 						<!-- </div> -->
 
-						<!-- <div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay=".25s"> -->
-							<!-- <div class="f-box f-icon-left f-icon-circle f-border"> -->
-								<!-- <i class="fa fa-hdd-o id-color"></i> -->
-								<!-- <div class="fb-text"> -->
-									<!-- <h4>Backup &amp; Security</h4> -->
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p> -->
-								<!-- </div> -->
-							<!-- </div> -->
-						<!-- </div> -->
+						<div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay=".25s">
+							<div class="f-box f-icon-left f-icon-circle f-border">
+								<i class="fa fa-hdd-o id-color"></i>
+								<div class="fb-text">
+									<h4>Backup &amp; Security</h4>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+								</div>
+							</div>
+						</div>
 
 						<!-- <div class="col-lg-4 col-md-6 mb30 wow fadeInRight" data-wow-delay=".5s"> -->
 							<!-- <div class="f-box f-icon-left f-icon-circle f-border"> -->
